src/main/java/org/example/profiruparser/errors/SessionExpiredException.java
package org.example.profiruparser.errors;

public class SessionExpiredException extends SearchException {
    public SessionExpiredException(String message) {
        super(message);
    }
}